--- a/example/index.html
+++ b/example/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body style="background-color: lightgray;">
+<body>
   <supre-root>Loading...</supre-root>
 </body>
 </html>
